--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -2,18 +2,13 @@ name: Deploy Staff Server to Azure App Service
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   workflow_dispatch:
-
-# Prevent overlapping / stuck deployments
-concurrency:
-  group: staff-server-prod
-  cancel-in-progress: true
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
 
     steps:
       - name: Checkout repository
@@ -27,32 +22,23 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        timeout-minutes: 5
 
       - name: Build TypeScript
         run: npm run build
-        timeout-minutes: 5
 
-      # ❌ DO NOT RUN THE APP IN CI
-      # This is what caused your hangs
-      # Startup code waits on env / DB / migrations
-
-      - name: Prepare deploy package
+      # sanity check — MUST exist
+      - name: Verify build output
         run: |
-          set -euo pipefail
-          rm -rf deploy deploy.zip
-          mkdir deploy
+          ls -la dist
+          test -f dist/index.js
 
-          cp -R dist deploy/dist
-          cp package.json deploy/package.json
-          cp package-lock.json deploy/package-lock.json
-
-          cd deploy
-          npm ci --omit=dev --ignore-scripts
-          cd ..
-
-          zip -r deploy.zip deploy
-        timeout-minutes: 5
+      - name: Prepare deploy package (FLAT)
+        run: |
+          rm -rf deploy.zip
+          zip -r deploy.zip \
+            dist \
+            package.json \
+            package-lock.json
 
       - name: Azure Login
         uses: azure/login@v2
