--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -11,41 +11,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
 
-      - name: Install dependencies
+      - name: Install deps
         run: npm ci
 
-      - name: Build TypeScript
+      - name: Build
         run: npm run build
 
-      # sanity check — MUST exist
       - name: Verify build output
-        run: |
-          ls -la dist
-          test -f dist/index.js
+        run: test -f dist/index.js
 
-      - name: Prepare deploy package (FLAT)
+      - name: Prepare ZIP (ROOT = wwwroot)
         run: |
-          rm -rf deploy.zip
-          zip -r deploy.zip \
-            dist \
-            package.json \
-            package-lock.json
+          rm -f deploy.zip
+          zip -r deploy.zip dist package.json package-lock.json
 
       - name: Azure Login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy to Azure Web App
+      - name: Deploy
         uses: azure/webapps-deploy@v2
         with:
           app-name: boreal-staff-server
