--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -11,33 +11,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm ci
 
-      - name: Build
+      - name: Build TypeScript
         run: npm run build
 
-      - name: Verify build output
-        run: test -f dist/index.js
-
-      - name: Prepare ZIP (ROOT = wwwroot)
+      - name: Validate compiled output
         run: |
-          rm -f deploy.zip
-          zip -r deploy.zip dist package.json package-lock.json
+          test -f dist/index.js
+          node dist/index.js --help || true
+
+      - name: Prepare deploy package (ROOT-LEVEL dist/)
+        run: |
+          rm -rf deploy.zip
+          zip -r deploy.zip \
+            dist \
+            package.json \
+            package-lock.json
 
       - name: Azure Login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: boreal-staff-server
