--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Validate compiled output
         run: |
           test -f dist/index.js
-          node dist/index.js --help || true
+          node --check dist/index.js
 
       - name: Prepare deploy package (ROOT-LEVEL dist/)
         run: |
