Update build config for Azure deploy

--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -19,8 +19,8 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install production dependencies
+        run: npm ci --omit=dev
 
       - name: Build
         run: npm run build
@@ -28,10 +28,10 @@ jobs:
       - name: Create deployment zip
         run: |
           rm -f deploy.zip
-          zip -r deploy.zip dist package.json package-lock.json
+          zip -r deploy.zip dist node_modules package.json package-lock.json
 
       - name: Deploy to Azure App Service
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
           app-name: boreal-staff-server
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
