--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "npm run build && node dist/index.js",
     "build": "rm -rf dist && tsc",
-    "start": "node dist/index.js",
-    "test": "jest"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.29.1",
@@ -26,14 +25,12 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
+    "@types/pg-mem": "file:types/pg-mem",
     "@types/supertest": "^6.0.2",
-    "jest": "^30.0.5",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
