--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -19,8 +19,8 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Install production dependencies
-        run: npm ci --omit=dev
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build
         run: npm run build
@@ -29,6 +29,13 @@ jobs:
         run: |
           rm -f deploy.zip
           zip -r deploy.zip dist node_modules package.json package-lock.json
+
+      - name: Disable SCM builds
+        uses: azure/appservice-settings@v1
+        with:
+          app-name: boreal-staff-server
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          app-settings-json: '[{"name":"SCM_DO_BUILD_DURING_DEPLOYMENT","value":"false","slotSetting":false},{"name":"ENABLE_ORYX_BUILD","value":"false","slotSetting":false}]'
 
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
