--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "staff-server",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "npm run build && node dist/index.js",
     "build": "rm -rf dist && tsc",
