--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.3",
+    "libphonenumber-js": "^1.12.34",
     "pg": "^8.11.5",
     "zod": "^3.23.8"
   },
