--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.3",
     "libphonenumber-js": "^1.12.34",
     "pg": "^8.11.5",
+    "twilio": "^5.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
