--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "npm run build && node dist/index.js",
-    "build": "rm -rf dist && tsc",
-    "start": "node dist/index.js",
+    "dev": "npm run build && node dist/server/index.js",
+    "build": "tsc",
+    "start": "node dist/server/index.js",
     "test": "jest",
     "user:set-role": "tsx scripts/set-user-role.ts"
   },
