--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,21 @@
 NODE_ENV=development
 PORT=8080
+BASE_URL=https://staff.example.com
 DATABASE_URL=postgres://user:password@localhost:5432/staff
+CORS_ALLOWED_ORIGINS=https://staff.boreal.financial
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX=100
+APPINSIGHTS_CONNECTION_STRING=InstrumentationKey=00000000-0000-0000-0000-000000000000
+
 JWT_SECRET=change-me
 JWT_REFRESH_SECRET=change-me-too
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=30d
+JWT_CLOCK_SKEW_SECONDS=60
+
 BUILD_TIMESTAMP=2024-01-01T00:00:00Z
 COMMIT_SHA=local-dev
-RUN_MIGRATIONS_ON_STARTUP=false
+RUN_MIGRATIONS=false
 
 LOGIN_LOCKOUT_THRESHOLD=5
 LOGIN_LOCKOUT_MINUTES=15
