--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/server/index.js",
     "db:migrate": "tsx -e \"import('./src/migrations').then(m => m.runMigrations()).catch(err => { console.error(err); process.exit(1); })\"",
     "db:seed": "tsx src/db/seed.ts",
-    "test": "echo \"DB tests disabled for V1 unblock\"",
+    "test": "jest",
     "user:set-role": "tsx scripts/set-user-role.ts"
   },
   "dependencies": {
@@ -38,6 +38,7 @@
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
     "jest": "^30.0.5",
+    "pg-mem": "^3.0.5",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "tsx": "^4.7.0",
