--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^4.0.17"
   }
 }
