--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "googleapis": "^133.0.0",
     "jsonwebtoken": "^9.0.3",
     "libphonenumber-js": "^1.12.34",
     "multer": "^2.0.2",
