Add vitest test harness and integration coverage

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "npm run build && node dist/server/index.js",
-    "build": "tsc",
+    "build": "npm run test && tsc",
     "start": "node dist/server/index.js",
     "db:migrate": "tsx -e \"import('./src/migrations').then(m => m.runMigrations()).catch(err => { console.error(err); process.exit(1); })\"",
     "db:seed": "tsx src/db/seed.ts",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "vitest run --config vitest.e2e.config.ts",
     "test:runtime": "npm run build && node scripts/runtime-verify.js",
     "test:codex:server": "node scripts/codex-server-test.js",
     "user:set-role": "tsx scripts/set-user-role.ts"
@@ -40,9 +43,12 @@
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
     "@types/web-push": "^3.6.4",
+    "@vitest/coverage-v8": "^4.0.18",
+    "cross-env": "^7.0.3",
     "jest": "^30.0.5",
     "pg-mem": "^3.0.5",
     "supertest": "^7.1.4",
+    "ts-node": "^10.9.2",
     "ts-jest": "^29.4.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
