--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ DATABASE_URL=postgres://user:password@localhost:5432/staff
 CORS_ALLOWED_ORIGINS=https://staff.boreal.financial
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX=100
+ENABLE_RATE_LIMITING=true
+ENABLE_AUDIT_HISTORY=true
+ENABLE_RETRY_POLICY=true
+ENABLE_IDEMPOTENCY=true
 APPINSIGHTS_CONNECTION_STRING=InstrumentationKey=00000000-0000-0000-0000-000000000000
 
 JWT_SECRET=change-me
