Add Boreal AI backend routes, services, schema, and tests

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,7 @@ LENDER_SUBMISSION_RATE_LIMIT_MAX=10
 LENDER_SUBMISSION_RATE_LIMIT_WINDOW_MS=60000
 ADMIN_RATE_LIMIT_MAX=120
 ADMIN_RATE_LIMIT_WINDOW_MS=60000
+
+OPENAI_API_KEY=
+AI_MODEL=gpt-4o-mini
+AI_EMBED_MODEL=text-embedding-3-small
