--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "jsonwebtoken": "^9.0.3",
     "libphonenumber-js": "^1.12.34",
     "multer": "^2.0.2",
+    "openai": "^6.21.0",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.11.5",
     "twilio": "^5.5.0",
+    "uuid": "^13.0.0",
     "web-push": "^3.6.7",
     "zod": "^3.23.8"
   },
@@ -47,6 +50,7 @@
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "@types/web-push": "^3.6.4",
     "@vitest/coverage-v8": "^4.0.18",
     "cross-env": "^7.0.3",
