--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.2.1",
     "googleapis": "^133.0.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "libphonenumber-js": "^1.12.34",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "openai": "^6.21.0",
     "pdf-parse": "^2.4.5",
@@ -47,6 +50,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
