--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^8.2.1",
     "googleapis": "^133.0.0",
+    "helmet": "^8.1.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "libphonenumber-js": "^1.12.34",
