--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "openai": "^6.21.0",
+    "p-limit": "^7.3.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.11.5",
     "twilio": "^5.5.0",
     "uuid": "^13.0.0",
     "web-push": "^3.6.7",
+    "winston": "^3.19.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
