--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "p-limit": "^7.3.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.11.5",
+    "pgvector": "^0.2.1",
     "twilio": "^5.5.0",
     "uuid": "^13.0.0",
     "web-push": "^3.6.7",
     "winston": "^3.19.0",
+    "ws": "^8.19.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -59,6 +61,7 @@
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@types/web-push": "^3.6.4",
+    "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^4.0.18",
     "cross-env": "^7.0.3",
     "jest": "^30.0.5",
