Add AI, credit scoring, contact, and issue foundation endpoints

--- a/.env.test
+++ b/.env.test
@@ -19,3 +19,5 @@ TWILIO_VOICE_CALLER_ID=+14155550000
 VAPID_PUBLIC_KEY=BEfWI4_C2Dzb-Nwj0lrRCX3tjsD6SHII7rSHm2T-NsJUdP6KBpfPoAggWrkxCbxat6Vv8O-HBZzYnzHvTT8uh1Q
 VAPID_PRIVATE_KEY=rkOdsYGnG4F-cu0nkuG6Zi5dTlFtOmzLUGCCUyYZZqY
 VAPID_SUBJECT=mailto:tests@example.com
+OPENAI_API_KEY=
+INTAKE_SMS_NUMBER=+15878881837
