--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,4 @@ ADMIN_RATE_LIMIT_WINDOW_MS=60000
 OPENAI_API_KEY=
 AI_MODEL=gpt-4o-mini
 AI_EMBED_MODEL=text-embedding-3-small
+INTAKE_SMS_NUMBER=+15878881837
