--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,9 @@ ADMIN_RATE_LIMIT_MAX=120
 ADMIN_RATE_LIMIT_WINDOW_MS=60000
 
 OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_EMBED_MODEL=text-embedding-3-small
+AI_SYSTEM_NAME=Maya
 AI_MODEL=gpt-4o-mini
 AI_EMBED_MODEL=text-embedding-3-small
 INTAKE_SMS_NUMBER=+15878881837
