Harden AI client initialization and tighten TS config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "src",
     "strict": true,
     "noImplicitAny": true,
+    "noImplicitOverride": true,
     "exactOptionalPropertyTypes": false,
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
