--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -25,8 +25,17 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Skip tests for V1 unblock
-        run: echo "Skipping DB tests"
+      - name: Validate types
+        run: npm run check
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Test
+        run: npm test
+
+      - name: Install dependencies before deploy package
+        run: npm ci
 
       - name: Create deployment package
         run: |
