--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "check": "tsc --noEmit",
     "db:migrate": "tsx -e \"import('./src/migrations').then(m => m.runMigrations()).catch(err => { console.error(err); process.exit(1); })\"",
     "db:seed": "tsx src/db/seed.ts",
-    "test": "vitest",
+    "test": "vitest --run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "vitest run --config vitest.e2e.config.ts",
     "test:runtime": "npm run build && node scripts/runtime-verify.js",
     "test:codex:server": "node scripts/codex-server-test.js",
     "user:set-role": "tsx scripts/set-user-role.ts",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.29.1",
+    "@azure/storage-blob": "^12.19.0",
     "@types/multer": "^2.0.0",
-    "ajv": "^8.17.1",
+    "ajv": "^8.18.0",
     "ajv-formats": "^3.0.1",
     "applicationinsights": "^3.12.1",
     "bcryptjs": "^3.0.3",
@@ -44,12 +44,13 @@
     "pdf-parse": "^2.4.5",
     "pg": "^8.11.5",
     "pgvector": "^0.2.1",
-    "twilio": "^5.5.0",
+    "twilio": "^4.21.0",
     "uuid": "^13.0.0",
     "web-push": "^3.6.7",
     "winston": "^3.19.0",
     "ws": "^8.19.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "axios": "^1.8.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -79,5 +80,9 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^4.0.17"
+  },
+  "overrides": {
+    "fast-xml-parser": "^4.4.1",
+    "qs": "^6.12.3"
   }
 }
