Stabilize readiness contracts, lint config, and audit gating

--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Test
         run: npm test
 
+      - name: Audit production dependencies (high only)
+        run: npm audit --omit=dev --audit-level=high
+
       - name: Install dependencies before deploy package
         run: npm ci
 
