--- a/package.json
+++ b/package.json
@@ -6,21 +6,10 @@
     "node": ">=22.0.0"
   },
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "build": "tsc",
-    "start": "node dist/server/index.js",
+    "lint": "eslint . --ext .ts",
     "check": "tsc --noEmit",
-    "db:migrate": "tsx -e \"import('./src/migrations').then(m => m.runMigrations()).catch(err => { console.error(err); process.exit(1); })\"",
-    "db:seed": "tsx src/db/seed.ts",
-    "test": "vitest --run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:e2e": "vitest run --config vitest.e2e.config.ts",
-    "test:runtime": "npm run build && node scripts/runtime-verify.js",
-    "test:codex:server": "node scripts/codex-server-test.js",
-    "user:set-role": "tsx scripts/set-user-role.ts",
-    "lint": "eslint .",
-    "audit:enterprise": "node scripts/enterprise-audit.js"
+    "build": "tsc",
+    "test": "vitest --run"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.19.0",
@@ -29,7 +18,6 @@
     "ajv-formats": "^3.0.1",
     "applicationinsights": "^3.12.1",
     "axios": "^1.13.5",
-    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -39,13 +27,10 @@
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "libphonenumber-js": "^1.12.34",
-    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "openai": "^6.22.0",
-    "p-limit": "^7.3.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.11.5",
-    "pgvector": "^0.2.1",
     "twilio": "^4.21.0",
     "uuid": "^13.0.0",
     "web-push": "^3.6.7",
@@ -54,12 +39,9 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
@@ -68,24 +50,12 @@
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
     "@typescript-eslint/parser": "^8.56.0",
-    "@vitest/coverage-v8": "^4.0.18",
-    "cross-env": "^7.0.3",
-    "depcheck": "^1.4.7",
-    "eslint": "^8.57.1",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "jest": "^30.0.5",
-    "madge": "^8.0.0",
-    "npm-check-updates": "^19.3.2",
+    "eslint": "^9.21.0",
     "pg-mem": "^3.0.5",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.0",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.17",
+    "@eslint/js": "^9.21.0"
   },
   "overrides": {
     "fast-xml-parser": "^4.4.1",
