Harden Twilio voice routes and add Twilio self-test

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest --run",
     "audit:prod": "npm audit --omit=dev",
     "verify": "npm run lint && npm run check && npm run build && npm run audit:prod",
-    "audit:enterprise": "node scripts/enterprise-audit.js"
+    "audit:enterprise": "node scripts/enterprise-audit.js",
+    "twilio:test": "node scripts/test-twilio.js"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.19.0",
