--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "openai": "^6.22.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.11.5",
+    "pino": "^10.3.1",
+    "pino-pretty": "^13.1.3",
     "semver": "^7.7.4",
     "twilio": "^4.21.0",
     "uuid": "^13.0.0",
