feat: google ads offline conversion revenue push

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,10 @@ AI_MODEL=gpt-4o-mini
 AI_EMBED_MODEL=text-embedding-3-small
 INTAKE_SMS_NUMBER=+15878881837
 TWILIO_MODE=mock
+
+GOOGLE_ADS_CUSTOMER_ID=
+GOOGLE_ADS_CLIENT_ID=
+GOOGLE_ADS_CLIENT_SECRET=
+GOOGLE_ADS_REFRESH_TOKEN=
+GOOGLE_ADS_DEVELOPER_TOKEN=
+GOOGLE_ADS_CONVERSION_ACTION_ID=
