--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^8.2.1",
+    "google-ads-api": "^23.0.0",
     "googleapis": "^133.0.0",
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
