Add admin JWT login and protect maya analytics route

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ JWT_REFRESH_SECRET=change-me-too
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=30d
 JWT_CLOCK_SKEW_SECONDS=60
+ADMIN_PASSWORD=change-this-admin-password
+ADMIN_JWT_SECRET=replace-with-long-random-secret
 
 BUILD_TIMESTAMP=2024-01-01T00:00:00Z
 COMMIT_SHA=local-dev
