--- a/package.json
+++ b/package.json
@@ -1,84 +1,22 @@
 {
-  "name": "staff-server",
+  "name": "bf-server",
   "version": "1.0.0",
   "private": true,
-  "engines": {
-    "node": ">=20.10.0 <21.0.0"
-  },
+  "type": "module",
   "scripts": {
-    "lint": "eslint .",
-    "check": "tsc --noEmit",
+    "dev": "node --loader ts-node/esm src/index.ts",
     "build": "tsc",
-    "test": "vitest --run",
-    "audit:prod": "npm audit --omit=dev",
-    "verify": "npm run lint && npm run check && npm run build && npm run audit:prod",
-    "audit:enterprise": "node scripts/enterprise-audit.js",
-    "twilio:test": "node scripts/test-twilio.js",
-    "prestart": "node ./scripts/verify-node-version.js",
     "start": "node dist/index.js",
-    "smoke": "node ./scripts/smoke-test.js"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest --run"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.19.0",
-    "@types/multer": "^2.0.0",
-    "ajv": "^8.18.0",
-    "ajv-formats": "^3.0.1",
-    "applicationinsights": "^3.12.1",
-    "axios": "^1.13.5",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-rate-limit": "^8.2.1",
-    "google-ads-api": "^23.0.0",
-    "googleapis": "^133.0.0",
-    "helmet": "^8.1.0",
-    "joi": "^18.0.2",
-    "jsonwebtoken": "^9.0.3",
-    "libphonenumber-js": "^1.12.34",
-    "multer": "^2.0.2",
-    "node-fetch": "^2.7.0",
-    "openai": "^6.22.0",
-    "pdf-parse": "^2.4.5",
-    "pg": "^8.11.5",
-    "pino": "^10.3.1",
-    "pino-pretty": "^13.1.3",
-    "semver": "^7.7.4",
-    "twilio": "^4.21.0",
-    "uuid": "^13.0.0",
-    "web-push": "^3.6.7",
-    "winston": "^3.19.0",
-    "ws": "^8.19.0",
-    "zod": "^3.25.76"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^25.0.3",
-    "@types/pg": "^8.16.0",
-    "@types/supertest": "^6.0.2",
-    "@types/uuid": "^10.0.0",
-    "@types/web-push": "^3.6.4",
-    "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.56.0",
-    "@typescript-eslint/parser": "^8.56.0",
-    "depcheck": "^1.4.7",
-    "eslint": "^9.21.0",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "madge": "^8.0.0",
-    "npm-check-updates": "^19.3.2",
-    "pg-mem": "^3.0.5",
-    "supertest": "^7.1.4",
-    "typescript": "^5.3.3",
-    "vitest": "^4.0.17"
-  },
-  "overrides": {
-    "fast-xml-parser": "^4.4.1",
-    "qs": "^6.15.0",
-    "axios": "^1.13.5"
-  },
-  "engineStrict": true
+    "typescript": "^5.4.0",
+    "vitest": "^1.5.0",
+    "ts-node": "^10.9.2",
+    "@types/node": "^20.11.0"
+  }
 }
